# uv_tutorial

./: .gitignore  README.md
my-app/: README.md  main.py  pyproject.toml
