[project]
name = "my-app"
version = "0.1.0"
description = "This project is created by uv, we use it to test uv"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "notebook>=7.5.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]


[project.scripts]
my-app = "main:main"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/"
explicit = true


